2003-07-08  David N. Welton  <davidw@dedasys.com>

	* src/buildscripts/findapxs.tcl: Added /usr/local/sbin as a place
	to check for apxs.  Thanks to Andy Doerr for pointing out that
	this is where it's kept on FreeBSD.

2003-07-07  David N. Welton  <davidw@dedasys.com>

	* doc/examples/upload.html: Added submit button to file upload
	example.

2003-07-05  David N. Welton  <davidw@dedasys.com>

	* src/rivetWWW.c (snprintf): Added snprintf define from Pat.

	* src/rivetParser.h: Added bit of defines for windows builds,
	declared some of the functions EXTERN's here.

	* src/rivetList.c: Make list commands created here 'static' - Pat.

	* src/rivetCrypt.c: Use ap_config.h to grab other header files we
	might need, like crypt.h.  This is not an ideal solution, because
	it adds a dependency we didn't have before.  Added change by Pat
	to conditionally compile or not the 'Rivet_Crypt' command.

	* src/rivet.h: Added EXTERN definitions for functions.

	* src/parserPkgInit.c (Rivetparser_Init): Added EXTERN decleration
	for win builds.

	* win/rules.vc: New file: include file for Microsoft makefile.

	* win/rivet.dsp: New file: Microsoft Developer Studio Project
	File.

	* win/nmakehlp.c: New file: helper for windows building.

	* win/makefile.vc: New file: makefile for windows.  All from Pat
	Thoyts <patthoyts@users.sourceforge.net>.

	* doc/examples/vars.html: Use a table to make the form look nicer.

	* doc/examples/vars.rvt: Now we display some results.

2003-07-01  David N. Welton  <davidw@dedasys.com>

	* src/rivetCore.c (Rivet_Upload): Pass the correct element of objv
	to TclWeb_UploadSave.

	* tests/uploadsave.rvt: New file to test 'upload save'.

	* tests/upload.test: New test for 'upload save'.

2003-06-30  David N. Welton  <davidw@dedasys.com>

	* src/mod_rivet.c (Rivet_ParseExecFile): Use Tcl_FSStat instead of
	Tcl_Stat.

	* src/rivetCore.c (Rivet_Parse): Use Tcl_FSStat instead of
	Tcl_Stat.

2003-06-29  David N. Welton  <davidw@dedasys.com>
