@@ -1,3 +1,10 @@
+2003-07-16  David N. Welton  <davidw@dedasys.com>
+
+	* doc/rivet.xml: Explain example script just a bit more clearly.
+
+	* src/make.tcl: Fix up clean target.  Use MOD_SHLIB as target
+	instead of explicit mod_rivet.so.
+
 2003-07-08  David N. Welton  <davidw@dedasys.com>
 
 	* src/buildscripts/findapxs.tcl: Added /usr/local/sbin as a place
